# rust-vendored-qt

./: .gitmodules  Cargo.toml  README.md
qt-cargo-base/: Cargo.toml
qt-cargo-base/src/: configure.rs  features.rs  lib.rs  sources.rs  util.rs
qtcore-host-tools/: Cargo.toml  build.rs
qtcore-host-tools/src/: lib.rs
